# quantifiction

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.specify/: feature.json  init-options.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
config/: cognitive.yaml  universe.yaml
config/strategies/: liq_reversal.yaml
data/loop_reports/: 20260721-2007.json  20260721-2031.json  20260721-2102.json  20260721-2131.json  20260721-2202.json  20260721-2231.json  20260721-2301.json  20260721-2332.json  20260722-0001.json  20260722-0032.json  20260722-0101.json  20260722-0130.json  20260722-0201.json  20260722-0232.json  20260722-0301.json  20260722-0330.json  20260722-0401.json  20260722-0430.json  20260722-0500.json  20260722-0530.json  20260722-0602.json  20260722-0630.json  20260722-0700.json  20260722-0731.json  20260722-0800.json  20260722-0831.json  20260722-0900.json  20260722-0908.json  20260722-0941.json  20260722-1001.json  20260722-1100.json  20260722-1131.json  20260722-1201.json  20260722-1231.json  20260722-1302.json  20260722-1331.json  20260722-1401.json  20260722-1434.json  20260722-1501.json  20260722-1531.json  (+59 more)
db/migrations/: 001_init.sql
docs/: ASSESSMENT-2026-07-21.md  PRD-v0.1.md  RESEARCH-REPORT-66iter.html  RESEARCH-REPORT-66iter.md
experiments/: live_runner_demo.py
scripts/: download_klines.sh  eval_trigger.py  quant.ps1  quant.sh  run_shadow_ws.ps1
specs/001-crypto-quant-trading/: data-model.md  plan.md  (+4 more)
tests/: conftest.py
(+92 files in other folders)
